got rid of italic

--- a/css/agency.css
+++ b/css/agency.css
@@ -48,7 +48,7 @@ font-family: 'Noto Serif', serif;
 .page-section h3.section-subheading {
   font-size: 16px;
   font-weight: 400;
-  font-style: italic;
+  font-style: normal;
   margin-bottom: 75px;
   text-transform: none;
   font-family: 'Noto Serif', serif;
@@ -186,7 +186,7 @@ header.masthead .intro-text {
 
 header.masthead .intro-text .intro-lead-in {
   font-size: 22px;
-  font-style: italic;
+  font-style: normal;
   line-height: 22px;
   margin-bottom: 25px;
   font-family: 'Noto Serif', serif;
