--- a/css/agency.css
+++ b/css/agency.css
@@ -172,7 +172,7 @@ font-family: 'Noto Serif', serif;
 header.masthead {
   text-align: center;
   color: #d61f31;
-  background-image: url("https://source.unsplash.com/gM8igOIP5MA");
+  background-image: url("https://source.unsplash.com/gM8igOIP5M");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
