got my image back

--- a/css/agency.css
+++ b/css/agency.css
@@ -10,7 +10,7 @@ body {
 }
 
 p {
-  line-height: normal;
+  line-height: ;
 }
 
 a {
@@ -172,7 +172,7 @@ font-family: 'Noto Serif', serif;
 header.masthead {
   text-align: center;
   color: #d61f31;
-  background-image: url("https://source.unsplash.com/gM8igOIP5M");
+  background-image: url("https://source.unsplash.com/gM8igOIP5MA");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
