changed background image

--- a/css/agency.css
+++ b/css/agency.css
@@ -231,7 +231,7 @@ font-family: 'Noto Serif', serif;
 header.masthead {
   text-align: center;
   color: #61a2ea;
-  background-image: url("https://source.unsplash.com/gM8igOIP5MA");
+  background-image: url("../img/portfolio-image-7.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
