--- a/css/agency.css
+++ b/css/agency.css
@@ -176,17 +176,17 @@ font-family: 'Noto Serif', serif;
   text-transform: uppercase;
   color: white;
   border: 0;
-  background-color:#61a2ea ;
+  background-color:#f8f9fa ;
 font-family: 'Noto Serif', serif;
 }
 
 #mainNav .navbar-brand {
-  color:  #61a2ea;
+  color:  #f8f9fa;
   font-family: 'Noto Serif', serif;
 }
 
 #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-  color: #61a2ea;
+  color: #f8f9fa;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -194,7 +194,7 @@ font-family: 'Noto Serif', serif;
   font-weight: bold;
   padding: 0.75em 0;
   letter-spacing: 1px;
-  color: #61a2ea;
+  color: #f8f9fa;
 font-family: 'Noto Serif', serif;
 }
 
@@ -230,7 +230,7 @@ font-family: 'Noto Serif', serif;
 
 header.masthead {
   text-align: center;
-  color: #61a2ea;
+  color: #f8f9fa;
   background-image: url("../img/portfolio-image-7.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -677,25 +677,25 @@ section#contact .form-control:focus {
 
 section#contact ::-webkit-input-placeholder {
   font-weight: 700;
-  color: #61a2ea;
+  color: #f8f9fa;
 font-family: 'Noto Serif', serif;
 }
 
 section#contact :-moz-placeholder {
   font-weight: 700;
-  color: #61a2ea;
+  color: #f8f9fa;
 font-family: 'Noto Serif', serif;
 }
 
 section#contact ::-moz-placeholder {
   font-weight: 700;
-  color: #61a2ea;
+  color: #f8f9fa;
 font-family: 'Noto Serif', serif;
 }
 
 section#contact :-ms-input-placeholder {
   font-weight: 700;
-  color: #61a2ea;
+  color: #f8f9fa;
 font-family: 'Noto Serif', serif;
 }
 
@@ -737,5 +737,5 @@ ul.social-buttons li a {
 }
 
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
-  background-color: #61a2ea;
+  background-color: #f8f9fa;
 }
